edit home , user roles , tag seeds

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "codemirror": "^5.57.0",
+        "font-awesome": "^4.7.0",
         "summernote": "^0.8.2"
     }
 }
